<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenActivity">

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="236dp"
        android:layout_height="48dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="639dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/subTextView"
        android:layout_width="236dp"
        android:layout_height="30dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="563dp"
        android:text="@string/enter_screen_time_minutes"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/morningEditText"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="221dp"
        android:layout_marginEnd="243dp"
        android:layout_marginBottom="469dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/morning"
        android:inputType="number"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/afternoonEditText"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="469dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/afternoon"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="270dp"
        android:layout_height="93dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="331dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="307dp"
        android:backgroundTint="#FFFEFE"
        android:ems="10"
        android:hint="@string/enter_extra_notes"
        android:inputType="text"
        android:textColorHint="#546E7A"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="106dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="474dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="208dp"
        android:text="@string/add"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="474dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="209dp"
        android:text="@string/clear"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewButton"
        android:layout_width="113dp"
        android:layout_height="50dp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="474dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="207dp"
        android:text="@string/view"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feedbackTextView"
        android:layout_width="267dp"
        android:layout_height="113dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="577dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="41dp"
        android:hint="@string/feeback_here"
        android:textColorHint="#546E7A"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>