<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="272dp"
        android:layout_height="54dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="647dp"
        android:text="@string/screen_smart"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="135dp"
        android:layout_height="33dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="588dp"
        android:text="@string/jesse_bennett"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/numberTextView"
        android:layout_width="103dp"
        android:layout_height="26dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="534dp"
        android:text="@string/st10519056"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="119dp"
        android:layout_height="57dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="609dp"
        android:layout_marginEnd="223dp"
        android:layout_marginBottom="65dp"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="118dp"
        android:layout_height="57dp"
        android:layout_marginStart="235dp"
        android:layout_marginTop="609dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="65dp"
        android:text="@string/exit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>